2006-10-29  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Update gnome-system-monitor branch for 
	gnome-2-16.

2006-10-26  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* translation-status.xml: Update vino branch for
	gnome-2-14 (yeah, obsolete, but I hate <100% ;))

2006-10-20  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for 2.16 to
	gnome-2-16 for gnome-screensaver and nautilus-cd-burn.
	
2006-10-20  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for evolution-webcal
	to HEAD for gnome 2.16

2006-10-16  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for
	evolution-data-server, evolution-exchange, gtkhtml to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for evolution to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for gnome-doc-utils to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for vino to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for evince to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for gnome-applets to gnome-2-16.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* translation-status.xml: Set release branch for file-roller to gnome-2-16.

2006-10-14  Wouter Bolsterlee  <wbolster@gnome.org>

	* translation-status.xml: Added brasero module.

2006-10-09  Abel Cheung  <abel@oaka.org>

	* translation-status.xml: set stable branch for gthumb.

2006-10-09  Francisco Javier F. Serrador  <serrador@openshine.com>
