@@ -2283,7 +2283,7 @@
       <component name="libgnome" dir="libgnome" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnome-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-16"/>
         <regenerate/>
         <download/>
       </component>
@@ -2336,7 +2336,7 @@
       <component name="libgnomeprint" dir="libgnomeprint" group="desktop">
         <podir dir="po"/>
         <potname name="libgnomeprint-2.2.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -2345,7 +2345,7 @@
       <component name="libgnomeprint" dir="libgnomeprint" group="desktop">
         <podir dir="po"/>
         <potname name="libgnomeprint-2.2.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -2356,7 +2356,7 @@
       <component name="libgnomeprintui" dir="libgnomeprintui" group="desktop">
         <podir dir="po"/>
         <potname name="libgnomeprintui-2.2.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -2365,7 +2365,7 @@
       <component name="libgnomeprintui" dir="libgnomeprintui" group="desktop">
         <podir dir="po"/>
         <potname name="libgnomeprintui-2.2.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -2396,7 +2396,7 @@
       <component name="libgnomeui" dir="libgnomeui" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomeui-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-16"/>
         <regenerate/>
         <download/>
       </component>
