@@ -1,3 +1,8 @@
+2006-10-31  Wouter Bolsterlee  <wbolster@cvs.gnome.org>
+
+	* translation-status.xml: Updated branches for libgnome,
+	libgnomeui, libgnomeprint and libgnomeprintui.
+
 2006-10-29  Francisco Javier F. Serrador  <serrador@openshine.com>
 
 	* translation-status.xml: Update gnome-system-monitor branch for 
